# datavis_lab8

./: .config  app.py  gen.py  palettes.py  pyproject.toml
