[project]
name = "datavis"
version = "0.1.0"
description = ""
authors = [
    {name = "nyekitka",email = "nikita.klinov.2016@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "streamlit (>=1.57.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
